# twitch-alerts

./: .gitignore  Cargo.toml  README.md  build-appimage.sh  twitch-alerts.desktop  urls.json
src/: main.rs  main_cef.rs  style.css
