[package]
name = "twitch-alerts-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
glib = { version = "0.15", features = ["v2_60"] }
gtk = { version = "0.15", features = ["v3_24"] }
gdk = { version = "0.15", features = ["v3_24"] }
webkit2gtk = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3  # For optimal performance
